[package]
name = "bopus"
version = "0.3.0"
authors = ["Zen <master_of_zen@protonmail.com>"]
edition = "2018"

[dependencies]
structopt = "0.*"
execute = "0.2.11"
regex = "1.5.6"
threadpool = "1.*"
num_cpus = "1.15.0"
rayon = "1.5.3"
which = "4.2.5"
anyhow = "1.0.57"
log = "0.4.17"
simplelog = "0.9"
lazy_static = "1.1.1"
